# mssh-menu

./: .gitignore  INSTALL.html  INSTALL.md  MANUAL.html  Makefile  README.html  README.md  __init__.py  __main__.py  env  mssh-menu.py  mssh_menu.py  pyproject.toml  servers.csv
docs/: Makefile  build_man_page.py
docs/install/: 00-metadata.md  10-prerequisites.md  21-install-linux.md  40-extra-info.md
docs/man/: examples.md
docs/markdown/: MANUAL.md  README.md
docs/output/: README.html
docs/readme/: 00-metadata.md  01-title.md  10-description.md  20-features.md  30-screenshots.md
examples/: servers.csv
man/: mssh-menu.1
releases/: mssh-menu.pyz  mssh_menu-0.0.6-py3-none-any.whl  release_notes.txt
shell-completions/bash/: mssh-menu
shell-completions/fish/: mssh-menu
shell-completions/zsh/: mssh-menu
